# BBEngine

./: .gitmodules  CMakeLists.txt
src/: CMakeLists.txt  gui.cpp  gui.h  mesh.cpp  mesh.h  model.cpp  model.h  scene.cpp  scene.h  windowManager.cpp  windowManager.h
src/opengl/: openGLRenderInterface.cpp  openGLRenderInterface.h  openGLWindowManager.cpp  openGLWindowManager.h
