cmake_minimum_required(VERSION 3.15)

project(BBEngine)

set(ASSIMP_BUILD_TESTS OFF)
set(ASSIMP_BUILD_ASSIMP_TOOLS OFF)
set(ASSIMP_BUILD_SAMPLES OFF)

add_subdirectory(external/assimp)

find_package(glfw3 REQUIRED)

add_library(glad external/glad/src/glad.c)
target_include_directories(glad PUBLIC external/glad/include)

add_subdirectory(external/glm)

set(SFML_BUILD_AUDIO FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_GRAPHICS FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_WINDOW FALSE CACHE BOOL "" FORCE)
set(SFML_BUILD_SYSTEM TRUE CACHE BOOL "" FORCE)
set(SFML_BUILD_NETWORK TRUE CACHE BOOL "" FORCE)
set(SFML_USE_SYSTEM_DEPS TRUE CACHE BOOL "" FORCE)

include(FetchContent)
FetchContent_Declare(SFML
    GIT_REPOSITORY https://github.com/SFML/SFML.git
    GIT_TAG 3.0.1
    GIT_SHALLOW ON
    EXCLUDE_FROM_ALL
    SYSTEM)
FetchContent_MakeAvailable(SFML)

set(RMLUI_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(RMLUI_BUILD_TESTS OFF CACHE BOOL "" FORCE)
add_subdirectory(external/RmlUi)

add_subdirectory(src)
target_include_directories(BBEngine PRIVATE include)
target_include_directories(BBEngine PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/src)

target_link_libraries(BBEngine PRIVATE glad glfw assimp SFML::Network RmlUi::Core RmlUi::Debugger glm::glm)